--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_logo_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".MusicList"></activity>
         <activity android:name=".WelcomeScreen">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
@@ -23,13 +24,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
 
-            <activity android:name=".MainActivity"
-                android:label="@string/app_name">
-                <intent-filter>
-                    <action android:name="android.intent.action.MAIN" />
-                </intent-filter>
-            </activity>
 
         <meta-data
             android:name="preloaded_fonts"
