+Checkboxes +graphs screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
             </intent-filter>
         </activity>
 
+        <receiver android:name=".AlarmReciever"/>
 
         <meta-data
             android:name="preloaded_fonts"
